--- a/notebook/val_4_prove.ipynb
+++ b/notebook/val_4_prove.ipynb
@@ -992,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1002,14 +1002,14 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m interesting_model \u001b[38;5;241m=\u001b[39m \u001b[43mconstruct_obj\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../data/net/models_4_gs_smooth_try\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minteresting_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morig_df\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[0;32mIn[18], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m interesting_model \u001b[38;5;241m=\u001b[39m \u001b[43mconstruct_obj\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m../data/net1l_sigmoid_4_smooth.csv\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43minteresting_index\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43morig_df\u001b[49m\u001b[43m)\u001b[49m\n",
       "Cell \u001b[0;32mIn[14], line 6\u001b[0m, in \u001b[0;36mconstruct_obj\u001b[0;34m(folder, index_list, df)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m index_list:\n\u001b[1;32m      5\u001b[0m     dummy \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m----> 6\u001b[0m     dummy[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnn_file_name\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m \u001b[43mfolder\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[43mdf\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43miloc\u001b[49m\u001b[43m[\u001b[49m\u001b[43mi\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtopology\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mstr\u001b[39m(i) \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m.json\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[1;32m      7\u001b[0m     dummy[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mindex\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m i\n\u001b[1;32m      8\u001b[0m     nn, stats \u001b[38;5;241m=\u001b[39m train_from_index(df, tr_normalized[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m250\u001b[39m], tr_normalized[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m250\u001b[39m:], i, topologies_dict)\n",
       "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"numpy.int64\") to str"
      ]
     }
    ],
    "source": [
-    "interesting_model = construct_obj('../data/net/models_4_gs_smooth_try', interesting_index, orig_df)"
+    "interesting_model = construct_obj('../data/net1l_sigmoid_4_smooth.csv', interesting_index, orig_df)"
    ]
   },
   {
