--- a/notebook/ML_cup_gs_ASTONISHING_FG_Stendhal.ipynb
+++ b/notebook/ML_cup_gs_ASTONISHING_FG_Stendhal.ipynb
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "MS = ModelSelection('../data/gs_data/1l_sigmoid_5_fg.csv')\n",
+    "MS = ModelSelection('../data/gs_data/1l_sigmoid_5_fg_Stendhal.csv')\n",
     "MS.default_values['metrics'] = [ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]\n",
     "hyperparam_grid = {\n",
     "    'lambda_tikhonov':[0.000000001, 0.00000001, 0.0000001],\n",
@@ -119,7 +119,7 @@
     "    \n",
     "    'adamax' : [False],\n",
     "}\n",
-    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 6, True, {})"
+    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 6, False, {})"
    ]
   }
  ],
