--- a/notebook/ML_cup_gs_ASTONISHING_FG_Gauss.ipynb
+++ b/notebook/ML_cup_gs_ASTONISHING_FG_Gauss.ipynb
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "MS = ModelSelection('../data/gs_data/1l_sigmoid_5_fg.csv')\n",
+    "MS = ModelSelection('../data/gs_data/1l_sigmoid_5_fg_gauss.csv')\n",
     "MS.default_values['metrics'] = [ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]\n",
     "hyperparam_grid = {\n",
     "    'lambda_tikhonov':[0.000000001, 0.00000001, 0.0000001],\n",
@@ -107,11 +107,9 @@
     "    'min_epochs': [150],\n",
     "    'max_epochs':[500],\n",
     "    \n",
-    "    \n",
-    "    'learning_rate':[0.07, 0.09], # 0.11, 0.13], #0.15\n",
+    "    'learning_rate':[0.07, 0.09],\n",
     "    'lr_decay_tau':[145, 165, 185, 200],\n",
     "    'alpha_momentum':[0.85, 0.92, 0.95],\n",
-    "    \n",
     "    \n",
     "    'error_increase_tolerance':[0.000001],\n",
     "    'patience':[5],\n",
@@ -119,7 +117,7 @@
     "    \n",
     "    'adamax' : [False],\n",
     "}\n",
-    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 6, True, {})"
+    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 5, False, {})"
    ]
   }
  ],
