--- a/notebook/done/nn_test_monk_3.ipynb
+++ b/notebook/done/nn_test_monk_3.ipynb
@@ -250,7 +250,7 @@
    ],
    "source": [
     "np.seterr('raise')\n",
-    "MS = ModelSelection('../data/gs_data/monk_3_test_kf.csv')\n",
+    "MS = ModelSelection('../data/gs_data/monk_3_kf.csv')\n",
     "\n",
     "MS.default_values['metrics'] = [ErrorFunctions.mean_squared_error, ErrorFunctions.accuracy]\n",
     "hyperparam_grid = {\n",
