--- a/notebook/ML_cup_gs_ASTONISHING_FG_Gauss.ipynb
+++ b/notebook/ML_cup_gs_ASTONISHING_FG_Gauss.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,29 +72,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already done:  101\n",
-      "tot conf: 108\n",
-      "remaining conf: 7\n",
-      "tot conf to do: 7\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 26\u001b[0m\n\u001b[1;32m     23\u001b[0m c1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: x\n\u001b[1;32m     24\u001b[0m constr \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124madamax\u001b[39m\u001b[38;5;124m'\u001b[39m: (c1, [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlearning_rate\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124malpha_momentum\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlr_decay_tau\u001b[39m\u001b[38;5;124m'\u001b[39m], [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124madamax_learning_rate\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexp_decay_rate_1\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexp_decay_rate_2\u001b[39m\u001b[38;5;124m'\u001b[39m])}\n\u001b[0;32m---> 26\u001b[0m \u001b[43mMS\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrid_searchKF\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtr_norm_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhyperparam_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconstr\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/ML/ML_Proj_NN-1/src/ModelSelection.py:396\u001b[0m, in \u001b[0;36mModelSelection.grid_searchKF\u001b[0;34m(self, data_set, hyperparameters, k_folds, n_proc, recovery, constraints)\u001b[0m\n\u001b[1;32m    393\u001b[0m \u001b[38;5;66;03m# distribute equally the workload among the processes\u001b[39;00m\n\u001b[1;32m    394\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_proc): \n\u001b[1;32m    395\u001b[0m     \u001b[38;5;66;03m# to give some time to the machine (and not make orrible print at the start)\u001b[39;00m\n\u001b[0;32m--> 396\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    397\u001b[0m     start \u001b[38;5;241m=\u001b[39m end\n\u001b[1;32m    398\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m remainder \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Already done:  0\n",
+      "tot conf: 216\n",
+      "remaining conf: 216\n",
+      "tot conf to do: 216\n",
+      "pid: 1092  started new kfold 1 / 36\n",
+      "pid: 1123  started new kfold 1 / 36\n",
+      "pid: 1149  started new kfold 1 / 36\n",
+      "pid: 1184  started new kfold 1 / 36\n",
+      "pid: 1210  started new kfold 1 / 36\n",
+      "pid: 1242  started new kfold 1 / 36\n",
+      "pid: 1210  started new kfold 2 / 36\n",
+      "pid: 1184  started new kfold 2 / 36\n",
+      "pid: 1149  started new kfold 2 / 36\n",
+      "pid: 1123  started new kfold 2 / 36\n",
+      "pid: 1092  started new kfold 2 / 36\n",
+      "pid: 1242  started new kfold 2 / 36\n",
+      "pid: 1184  started new kfold 3 / 36\n"
      ]
     }
    ],
@@ -117,7 +118,7 @@
     "    \n",
     "    'adamax' : [False],\n",
     "}\n",
-    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 5, False, {})"
+    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 6, False, {})"
    ]
   }
  ],
