--- a/notebook/ML_cup_gs_ASTONISHING_FG_Jacobi.ipynb
+++ b/notebook/ML_cup_gs_ASTONISHING_FG_Jacobi.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -72,34 +72,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already done:  101\n",
-      "tot conf: 108\n",
-      "remaining conf: 7\n",
-      "tot conf to do: 7\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 26\u001b[0m\n\u001b[1;32m     23\u001b[0m c1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: x\n\u001b[1;32m     24\u001b[0m constr \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124madamax\u001b[39m\u001b[38;5;124m'\u001b[39m: (c1, [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlearning_rate\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124malpha_momentum\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlr_decay_tau\u001b[39m\u001b[38;5;124m'\u001b[39m], [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124madamax_learning_rate\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexp_decay_rate_1\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexp_decay_rate_2\u001b[39m\u001b[38;5;124m'\u001b[39m])}\n\u001b[0;32m---> 26\u001b[0m \u001b[43mMS\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrid_searchKF\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtr_norm_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhyperparam_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconstr\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/ML/ML_Proj_NN-1/src/ModelSelection.py:396\u001b[0m, in \u001b[0;36mModelSelection.grid_searchKF\u001b[0;34m(self, data_set, hyperparameters, k_folds, n_proc, recovery, constraints)\u001b[0m\n\u001b[1;32m    393\u001b[0m \u001b[38;5;66;03m# distribute equally the workload among the processes\u001b[39;00m\n\u001b[1;32m    394\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_proc): \n\u001b[1;32m    395\u001b[0m     \u001b[38;5;66;03m# to give some time to the machine (and not make orrible print at the start)\u001b[39;00m\n\u001b[0;32m--> 396\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    397\u001b[0m     start \u001b[38;5;241m=\u001b[39m end\n\u001b[1;32m    398\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m remainder \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Already done:  0\n",
+      "tot conf: 72\n",
+      "remaining conf: 72\n",
+      "tot conf to do: 72\n",
+      "pid: 110022  started new kfold 1 / 18\n",
+      "pid: 110047  started new kfold 1 / 18\n",
+      "pid: 110076  started new kfold 1 / 18\n",
+      "pid: 110101  started new kfold 1 / 18\n",
+      "pid: 110022  started new kfold 2 / 18\n",
+      "pid: 110076  started new kfold 2 / 18\n",
+      "pid: 110047  started new kfold 2 / 18\n",
+      "pid: 110101  started new kfold 2 / 18\n",
+      "pid: 110047  started new kfold 3 / 18\n",
+      "pid: 110076  started new kfold 3 / 18\n",
+      "pid: 110022  started new kfold 3 / 18\n",
+      "pid: 110101  started new kfold 3 / 18\n",
+      "pid: 110047  started new kfold 4 / 18\n",
+      "pid: 110076  started new kfold 4 / 18\n",
+      "pid: 110022  started new kfold 4 / 18\n",
+      "pid: 110101  started new kfold 4 / 18\n",
+      "pid: 110047  started new kfold 5 / 18\n",
+      "pid: 110076  started new kfold 5 / 18\n",
+      "pid: 110022  started new kfold 5 / 18\n",
+      "pid: 110101  started new kfold 5 / 18\n",
+      "pid: 110047  started new kfold 6 / 18\n",
+      "pid: 110022  started new kfold 6 / 18\n",
+      "pid: 110101  started new kfold 6 / 18\n",
+      "pid: 110076  started new kfold 6 / 18\n",
+      "pid: 110047  started new kfold 7 / 18\n",
+      "pid: 110022  started new kfold 7 / 18\n",
+      "pid: 110101  started new kfold 7 / 18\n",
+      "pid: 110076  started new kfold 7 / 18\n",
+      "pid: 110047  started new kfold 8 / 18\n",
+      "pid: 110022  started new kfold 8 / 18\n",
+      "pid: 110101  started new kfold 8 / 18\n",
+      "pid: 110076  started new kfold 8 / 18\n",
+      "pid: 110047  started new kfold 9 / 18\n",
+      "pid: 110101  started new kfold 9 / 18\n",
+      "pid: 110022  started new kfold 9 / 18\n",
+      "pid: 110076  started new kfold 9 / 18\n",
+      "pid: 110047  started new kfold 10 / 18\n",
+      "pid: 110022  started new kfold 10 / 18\n",
+      "pid: 110047  started new kfold 11 / 18\n",
+      "pid: 110101  started new kfold 10 / 18\n",
+      "pid: 110076  started new kfold 10 / 18\n",
+      "pid: 110047  started new kfold 12 / 18\n",
+      "pid: 110022  started new kfold 11 / 18\n",
+      "pid: 110101  started new kfold 11 / 18\n",
+      "pid: 110076  started new kfold 11 / 18\n",
+      "pid: 110047  started new kfold 13 / 18\n",
+      "pid: 110022  started new kfold 12 / 18\n",
+      "pid: 110101  started new kfold 12 / 18\n",
+      "pid: 110076  started new kfold 12 / 18\n",
+      "pid: 110047  started new kfold 14 / 18\n",
+      "pid: 110022  started new kfold 13 / 18\n",
+      "pid: 110101  started new kfold 13 / 18\n",
+      "pid: 110076  started new kfold 13 / 18\n",
+      "pid: 110022  started new kfold 14 / 18\n",
+      "pid: 110101  started new kfold 14 / 18\n",
+      "pid: 110047  started new kfold 15 / 18\n",
+      "pid: 110076  started new kfold 14 / 18\n",
+      "pid: 110101  started new kfold 15 / 18\n",
+      "pid: 110022  started new kfold 15 / 18\n",
+      "pid: 110047  started new kfold 16 / 18\n",
+      "pid: 110101  started new kfold 16 / 18\n",
+      "pid: 110076  started new kfold 15 / 18\n",
+      "pid: 110022  started new kfold 16 / 18\n",
+      "pid: 110047  started new kfold 17 / 18\n",
+      "pid: 110022  started new kfold 17 / 18\n",
+      "pid: 110101  started new kfold 17 / 18\n",
+      "pid: 110076  started new kfold 16 / 18\n",
+      "pid: 110022  started new kfold 18 / 18\n",
+      "pid: 110047  started new kfold 18 / 18\n",
+      "pid: 110101  started new kfold 18 / 18\n",
+      "pid: 110076  started new kfold 17 / 18\n",
+      "pid: 110076  started new kfold 18 / 18\n"
      ]
     }
    ],
    "source": [
-    "MS = ModelSelection('../data/gs_data/1l_sigmoid_5_fg.csv')\n",
+    "MS = ModelSelection('../data/gs_data/1l_sigmoid_5_fg_Jacobi.csv')\n",
     "MS.default_values['metrics'] = [ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]\n",
     "hyperparam_grid = {\n",
     "    'lambda_tikhonov':[0.000000001, 0.00000001, 0.0000001],\n",
@@ -119,7 +179,7 @@
     "    \n",
     "    'adamax' : [False],\n",
     "}\n",
-    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 6, True, {})"
+    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 4, False, {})"
    ]
   }
  ],
@@ -139,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
