--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -130,26 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5161290322580645\n",
-      "0.5161290322580645\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "module 'ErrorFunctions' has no attribute 'f1_score'",
+     "ename": "NameError",
+     "evalue": "name 'predictions' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(ErrorFunctions\u001b[38;5;241m.\u001b[39maccuracy(predictions, true_values))\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(sklearn\u001b[38;5;241m.\u001b[39mmetrics\u001b[38;5;241m.\u001b[39maccuracy_score(true_values\u001b[38;5;241m.\u001b[39mflatten(), [\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.5\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m predictions\u001b[38;5;241m.\u001b[39mflatten()]))\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mErrorFunctions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mf1_score\u001b[49m(predictions, true_values))\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(sklearn\u001b[38;5;241m.\u001b[39mmetrics\u001b[38;5;241m.\u001b[39mf1_score(true_values\u001b[38;5;241m.\u001b[39mflatten(), [\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.5\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m predictions\u001b[38;5;241m.\u001b[39mflatten()], average\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmacro\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: module 'ErrorFunctions' has no attribute 'f1_score'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(ErrorFunctions\u001b[38;5;241m.\u001b[39maccuracy(\u001b[43mpredictions\u001b[49m, true_values))\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(sklearn\u001b[38;5;241m.\u001b[39mmetrics\u001b[38;5;241m.\u001b[39maccuracy_score(true_values\u001b[38;5;241m.\u001b[39mflatten(), [\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.5\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m predictions\u001b[38;5;241m.\u001b[39mflatten()]))\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(ErrorFunctions\u001b[38;5;241m.\u001b[39mf1_score(predictions, true_values))\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'predictions' is not defined"
      ]
     }
    ],
@@ -353,9 +345,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'ActivationFunctions' has no attribute 'gaussian'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m act_fun \u001b[38;5;241m=\u001b[39m [ActivationFunctions\u001b[38;5;241m.\u001b[39midentity, \u001b[43mActivationFunctions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgaussian\u001b[49m, ActivationFunctions\u001b[38;5;241m.\u001b[39msigmoid, ActivationFunctions\u001b[38;5;241m.\u001b[39msoftplus, ActivationFunctions\u001b[38;5;241m.\u001b[39mtanh,\n\u001b[1;32m      2\u001b[0m            ActivationFunctions\u001b[38;5;241m.\u001b[39mReLU]\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'ActivationFunctions' has no attribute 'gaussian'"
+     ]
+    }
+   ],
    "source": [
     "act_fun = [ActivationFunctions.identity, ActivationFunctions.gaussian, ActivationFunctions.sigmoid, ActivationFunctions.softplus, ActivationFunctions.tanh,\n",
     "           ActivationFunctions.ReLU]"
