--- a/notebook/ML_cup_gs_ASTONISHING_FG_Stendhal.ipynb
+++ b/notebook/ML_cup_gs_ASTONISHING_FG_Stendhal.ipynb
@@ -2,9 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_243/1381934199.py:5: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
@@ -23,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -72,29 +87,163 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/smarz/ML/ML_Proj_NN-1/src/ModelSelection.py:330: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "  df = pandas.concat([pandas.read_csv(f, header = 0) for f in backup_file], ignore_index=True)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already done:  101\n",
-      "tot conf: 108\n",
-      "remaining conf: 7\n",
-      "tot conf to do: 7\n"
-     ]
-    },
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[12], line 26\u001b[0m\n\u001b[1;32m     23\u001b[0m c1 \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mlambda\u001b[39;00m x: x\n\u001b[1;32m     24\u001b[0m constr \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124madamax\u001b[39m\u001b[38;5;124m'\u001b[39m: (c1, [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlearning_rate\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124malpha_momentum\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mlr_decay_tau\u001b[39m\u001b[38;5;124m'\u001b[39m], [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124madamax_learning_rate\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexp_decay_rate_1\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mexp_decay_rate_2\u001b[39m\u001b[38;5;124m'\u001b[39m])}\n\u001b[0;32m---> 26\u001b[0m \u001b[43mMS\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mgrid_searchKF\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtr_norm_df\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mvalues\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhyperparam_grid\u001b[49m\u001b[43m,\u001b[49m\u001b[43m  \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m6\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconstr\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m~/ML/ML_Proj_NN-1/src/ModelSelection.py:396\u001b[0m, in \u001b[0;36mModelSelection.grid_searchKF\u001b[0;34m(self, data_set, hyperparameters, k_folds, n_proc, recovery, constraints)\u001b[0m\n\u001b[1;32m    393\u001b[0m \u001b[38;5;66;03m# distribute equally the workload among the processes\u001b[39;00m\n\u001b[1;32m    394\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(n_proc): \n\u001b[1;32m    395\u001b[0m     \u001b[38;5;66;03m# to give some time to the machine (and not make orrible print at the start)\u001b[39;00m\n\u001b[0;32m--> 396\u001b[0m     \u001b[43mtime\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msleep\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m    397\u001b[0m     start \u001b[38;5;241m=\u001b[39m end\n\u001b[1;32m    398\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m remainder \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+      "Already done:  22\n",
+      "tot conf: 144\n",
+      "remaining conf: 122\n",
+      "tot conf to do: 122\n",
+      "pid: 528  started new kfold 1 / 21\n",
+      "pid: 556  started new kfold 1 / 21\n",
+      "pid: 584  started new kfold 1 / 20\n",
+      "pid: 609  started new kfold 1 / 20\n",
+      "pid: 637  started new kfold 1 / 20\n",
+      "pid: 662  started new kfold 1 / 20\n",
+      "pid: 528  started new kfold 2 / 21\n",
+      "pid: 662  started new kfold 2 / 20\n",
+      "pid: 584  started new kfold 2 / 20\n",
+      "pid: 637  started new kfold 2 / 20\n",
+      "pid: 556  started new kfold 2 / 21\n",
+      "pid: 609  started new kfold 2 / 20\n",
+      "pid: 662  started new kfold 3 / 20\n",
+      "pid: 584  started new kfold 3 / 20\n",
+      "pid: 556  started new kfold 3 / 21\n",
+      "math range error\n",
+      "pid: 556  started new kfold 4 / 21\n",
+      "math range error\n",
+      "pid: 584  started new kfold 4 / 20\n",
+      "pid: 528  started new kfold 3 / 21\n",
+      "pid: 637  started new kfold 3 / 20\n",
+      "pid: 609  started new kfold 3 / 20\n",
+      "pid: 662  started new kfold 4 / 20\n",
+      "math range error\n",
+      "pid: 609  started new kfold 4 / 20\n",
+      "pid: 556  started new kfold 5 / 21\n",
+      "pid: 584  started new kfold 5 / 20\n",
+      "math range error\n",
+      "pid: 662  started new kfold 5 / 20\n",
+      "pid: 609  started new kfold 5 / 20\n",
+      "pid: 528  started new kfold 4 / 21\n",
+      "pid: 637  started new kfold 4 / 20\n",
+      "pid: 662  started new kfold 6 / 20\n",
+      "pid: 556  started new kfold 6 / 21\n",
+      "pid: 584  started new kfold 6 / 20\n",
+      "pid: 609  started new kfold 6 / 20\n",
+      "pid: 637  started new kfold 5 / 20\n",
+      "pid: 528  started new kfold 5 / 21\n",
+      "pid: 556  started new kfold 7 / 21\n",
+      "pid: 584  started new kfold 7 / 20\n",
+      "pid: 662  started new kfold 7 / 20\n",
+      "math range error\n",
+      "pid: 556  started new kfold 8 / 21\n",
+      "pid: 528  started new kfold 6 / 21\n",
+      "math range error\n",
+      "pid: 662  started new kfold 8 / 20\n",
+      "math range error\n",
+      "pid: 662  started new kfold 9 / 20\n",
+      "pid: 609  started new kfold 7 / 20\n",
+      "pid: 637  started new kfold 6 / 20\n",
+      "math range error\n",
+      "pid: 528  started new kfold 7 / 21\n",
+      "pid: 584  started new kfold 8 / 20\n",
+      "pid: 662  started new kfold 10 / 20\n",
+      "pid: 556  started new kfold 9 / 21\n",
+      "pid: 528  started new kfold 8 / 21\n",
+      "pid: 609  started new kfold 8 / 20\n",
+      "pid: 637  started new kfold 7 / 20\n",
+      "pid: 662  started new kfold 11 / 20\n",
+      "pid: 584  started new kfold 9 / 20\n",
+      "pid: 528  started new kfold 9 / 21\n",
+      "pid: 556  started new kfold 10 / 21\n",
+      "math range error\n",
+      "pid: 584  started new kfold 10 / 20\n",
+      "pid: 637  started new kfold 8 / 20\n",
+      "pid: 662  started new kfold 12 / 20\n",
+      "pid: 609  started new kfold 9 / 20\n",
+      "pid: 556  started new kfold 11 / 21\n",
+      "pid: 528  started new kfold 10 / 21\n",
+      "pid: 662  started new kfold 13 / 20\n",
+      "pid: 584  started new kfold 11 / 20\n",
+      "pid: 637  started new kfold 9 / 20\n",
+      "math range error\n",
+      "pid: 637  started new kfold 10 / 20\n",
+      "math range error\n",
+      "pid: 662  started new kfold 14 / 20\n",
+      "pid: 609  started new kfold 10 / 20\n",
+      "pid: 584  started new kfold 12 / 20\n",
+      "pid: 556  started new kfold 12 / 21\n",
+      "pid: 528  started new kfold 11 / 21\n",
+      "pid: 662  started new kfold 15 / 20\n",
+      "pid: 637  started new kfold 11 / 20\n",
+      "pid: 609  started new kfold 11 / 20\n",
+      "pid: 584  started new kfold 13 / 20\n",
+      "pid: 556  started new kfold 13 / 21\n",
+      "pid: 609  started new kfold 12 / 20\n",
+      "pid: 528  started new kfold 12 / 21\n",
+      "pid: 662  started new kfold 16 / 20\n",
+      "pid: 637  started new kfold 12 / 20\n",
+      "pid: 528  started new kfold 13 / 21\n",
+      "pid: 662  started new kfold 17 / 20\n",
+      "math range error\n",
+      "pid: 662  started new kfold 18 / 20\n",
+      "pid: 584  started new kfold 14 / 20\n",
+      "pid: 609  started new kfold 13 / 20\n",
+      "pid: 556  started new kfold 14 / 21\n",
+      "pid: 662  started new kfold 19 / 20\n",
+      "pid: 637  started new kfold 13 / 20\n",
+      "pid: 609  started new kfold 14 / 20\n",
+      "math range error\n",
+      "pid: 609  started new kfold 15 / 20\n",
+      "math range error\n",
+      "pid: 609  started new kfold 16 / 20\n",
+      "pid: 584  started new kfold 15 / 20\n",
+      "pid: 528  started new kfold 14 / 21\n",
+      "pid: 637  started new kfold 14 / 20\n",
+      "pid: 556  started new kfold 15 / 21\n",
+      "pid: 662  started new kfold 20 / 20\n",
+      "math range error\n",
+      "pid: 528  started new kfold 15 / 21\n",
+      "pid: 609  started new kfold 17 / 20\n",
+      "pid: 584  started new kfold 16 / 20\n",
+      "pid: 637  started new kfold 15 / 20\n",
+      "pid: 584  started new kfold 17 / 20\n",
+      "pid: 556  started new kfold 16 / 21\n",
+      "pid: 528  started new kfold 16 / 21\n",
+      "pid: 609  started new kfold 18 / 20\n",
+      "pid: 637  started new kfold 16 / 20\n",
+      "pid: 584  started new kfold 18 / 20\n",
+      "pid: 609  started new kfold 19 / 20\n",
+      "pid: 556  started new kfold 17 / 21\n",
+      "pid: 528  started new kfold 17 / 21\n",
+      "pid: 584  started new kfold 19 / 20\n",
+      "pid: 609  started new kfold 20 / 20\n",
+      "pid: 637  started new kfold 17 / 20\n",
+      "math range error\n",
+      "pid: 584  started new kfold 20 / 20\n",
+      "pid: 556  started new kfold 18 / 21\n",
+      "pid: 528  started new kfold 18 / 21\n",
+      "pid: 637  started new kfold 18 / 20\n",
+      "pid: 528  started new kfold 19 / 21\n",
+      "pid: 556  started new kfold 19 / 21\n",
+      "pid: 637  started new kfold 19 / 20\n",
+      "pid: 528  started new kfold 20 / 21\n",
+      "pid: 556  started new kfold 20 / 21\n",
+      "pid: 637  started new kfold 20 / 20\n",
+      "pid: 556  started new kfold 21 / 21\n",
+      "pid: 528  started new kfold 21 / 21\n"
      ]
     }
    ],
@@ -119,7 +268,7 @@
     "    \n",
     "    'adamax' : [False],\n",
     "}\n",
-    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 6, False, {})"
+    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 6, True, {})"
    ]
   }
  ],
