--- a/notebook/done/ML_cup_gs_ASTONISHING_FG_Gauss.ipynb
+++ b/notebook/done/ML_cup_gs_ASTONISHING_FG_Gauss.ipynb
@@ -220,7 +220,7 @@
     "    'min_epochs': [150],\n",
     "    'max_epochs':[500],\n",
     "    \n",
-    "    'learning_rate':[0.09, 0.07],\n",
+    "    'learning_rate':[0.09, 0.07, 0.11, 0.13],\n",
     "    'lr_decay_tau':[145, 165, 185, 200],\n",
     "    'alpha_momentum':[0.85, 0.92, 0.95],\n",
     "    \n",
