--- a/notebook/ML_cup_gs_ASTONISHING_FG_Stendhal.ipynb
+++ b/notebook/ML_cup_gs_ASTONISHING_FG_Stendhal.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_243/1381934199.py:5: DeprecationWarning: \n",
+      "/tmp/ipykernel_15501/1381934199.py:5: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -91,175 +91,32 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/smarz/ML/ML_Proj_NN-1/src/ModelSelection.py:330: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  df = pandas.concat([pandas.read_csv(f, header = 0) for f in backup_file], ignore_index=True)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Already done:  22\n",
-      "tot conf: 144\n",
-      "remaining conf: 122\n",
-      "tot conf to do: 122\n",
-      "pid: 528  started new kfold 1 / 21\n",
-      "pid: 556  started new kfold 1 / 21\n",
-      "pid: 584  started new kfold 1 / 20\n",
-      "pid: 609  started new kfold 1 / 20\n",
-      "pid: 637  started new kfold 1 / 20\n",
-      "pid: 662  started new kfold 1 / 20\n",
-      "pid: 528  started new kfold 2 / 21\n",
-      "pid: 662  started new kfold 2 / 20\n",
-      "pid: 584  started new kfold 2 / 20\n",
-      "pid: 637  started new kfold 2 / 20\n",
-      "pid: 556  started new kfold 2 / 21\n",
-      "pid: 609  started new kfold 2 / 20\n",
-      "pid: 662  started new kfold 3 / 20\n",
-      "pid: 584  started new kfold 3 / 20\n",
-      "pid: 556  started new kfold 3 / 21\n",
-      "math range error\n",
-      "pid: 556  started new kfold 4 / 21\n",
-      "math range error\n",
-      "pid: 584  started new kfold 4 / 20\n",
-      "pid: 528  started new kfold 3 / 21\n",
-      "pid: 637  started new kfold 3 / 20\n",
-      "pid: 609  started new kfold 3 / 20\n",
-      "pid: 662  started new kfold 4 / 20\n",
-      "math range error\n",
-      "pid: 609  started new kfold 4 / 20\n",
-      "pid: 556  started new kfold 5 / 21\n",
-      "pid: 584  started new kfold 5 / 20\n",
-      "math range error\n",
-      "pid: 662  started new kfold 5 / 20\n",
-      "pid: 609  started new kfold 5 / 20\n",
-      "pid: 528  started new kfold 4 / 21\n",
-      "pid: 637  started new kfold 4 / 20\n",
-      "pid: 662  started new kfold 6 / 20\n",
-      "pid: 556  started new kfold 6 / 21\n",
-      "pid: 584  started new kfold 6 / 20\n",
-      "pid: 609  started new kfold 6 / 20\n",
-      "pid: 637  started new kfold 5 / 20\n",
-      "pid: 528  started new kfold 5 / 21\n",
-      "pid: 556  started new kfold 7 / 21\n",
-      "pid: 584  started new kfold 7 / 20\n",
-      "pid: 662  started new kfold 7 / 20\n",
-      "math range error\n",
-      "pid: 556  started new kfold 8 / 21\n",
-      "pid: 528  started new kfold 6 / 21\n",
-      "math range error\n",
-      "pid: 662  started new kfold 8 / 20\n",
-      "math range error\n",
-      "pid: 662  started new kfold 9 / 20\n",
-      "pid: 609  started new kfold 7 / 20\n",
-      "pid: 637  started new kfold 6 / 20\n",
-      "math range error\n",
-      "pid: 528  started new kfold 7 / 21\n",
-      "pid: 584  started new kfold 8 / 20\n",
-      "pid: 662  started new kfold 10 / 20\n",
-      "pid: 556  started new kfold 9 / 21\n",
-      "pid: 528  started new kfold 8 / 21\n",
-      "pid: 609  started new kfold 8 / 20\n",
-      "pid: 637  started new kfold 7 / 20\n",
-      "pid: 662  started new kfold 11 / 20\n",
-      "pid: 584  started new kfold 9 / 20\n",
-      "pid: 528  started new kfold 9 / 21\n",
-      "pid: 556  started new kfold 10 / 21\n",
-      "math range error\n",
-      "pid: 584  started new kfold 10 / 20\n",
-      "pid: 637  started new kfold 8 / 20\n",
-      "pid: 662  started new kfold 12 / 20\n",
-      "pid: 609  started new kfold 9 / 20\n",
-      "pid: 556  started new kfold 11 / 21\n",
-      "pid: 528  started new kfold 10 / 21\n",
-      "pid: 662  started new kfold 13 / 20\n",
-      "pid: 584  started new kfold 11 / 20\n",
-      "pid: 637  started new kfold 9 / 20\n",
-      "math range error\n",
-      "pid: 637  started new kfold 10 / 20\n",
-      "math range error\n",
-      "pid: 662  started new kfold 14 / 20\n",
-      "pid: 609  started new kfold 10 / 20\n",
-      "pid: 584  started new kfold 12 / 20\n",
-      "pid: 556  started new kfold 12 / 21\n",
-      "pid: 528  started new kfold 11 / 21\n",
-      "pid: 662  started new kfold 15 / 20\n",
-      "pid: 637  started new kfold 11 / 20\n",
-      "pid: 609  started new kfold 11 / 20\n",
-      "pid: 584  started new kfold 13 / 20\n",
-      "pid: 556  started new kfold 13 / 21\n",
-      "pid: 609  started new kfold 12 / 20\n",
-      "pid: 528  started new kfold 12 / 21\n",
-      "pid: 662  started new kfold 16 / 20\n",
-      "pid: 637  started new kfold 12 / 20\n",
-      "pid: 528  started new kfold 13 / 21\n",
-      "pid: 662  started new kfold 17 / 20\n",
-      "math range error\n",
-      "pid: 662  started new kfold 18 / 20\n",
-      "pid: 584  started new kfold 14 / 20\n",
-      "pid: 609  started new kfold 13 / 20\n",
-      "pid: 556  started new kfold 14 / 21\n",
-      "pid: 662  started new kfold 19 / 20\n",
-      "pid: 637  started new kfold 13 / 20\n",
-      "pid: 609  started new kfold 14 / 20\n",
-      "math range error\n",
-      "pid: 609  started new kfold 15 / 20\n",
-      "math range error\n",
-      "pid: 609  started new kfold 16 / 20\n",
-      "pid: 584  started new kfold 15 / 20\n",
-      "pid: 528  started new kfold 14 / 21\n",
-      "pid: 637  started new kfold 14 / 20\n",
-      "pid: 556  started new kfold 15 / 21\n",
-      "pid: 662  started new kfold 20 / 20\n",
-      "math range error\n",
-      "pid: 528  started new kfold 15 / 21\n",
-      "pid: 609  started new kfold 17 / 20\n",
-      "pid: 584  started new kfold 16 / 20\n",
-      "pid: 637  started new kfold 15 / 20\n",
-      "pid: 584  started new kfold 17 / 20\n",
-      "pid: 556  started new kfold 16 / 21\n",
-      "pid: 528  started new kfold 16 / 21\n",
-      "pid: 609  started new kfold 18 / 20\n",
-      "pid: 637  started new kfold 16 / 20\n",
-      "pid: 584  started new kfold 18 / 20\n",
-      "pid: 609  started new kfold 19 / 20\n",
-      "pid: 556  started new kfold 17 / 21\n",
-      "pid: 528  started new kfold 17 / 21\n",
-      "pid: 584  started new kfold 19 / 20\n",
-      "pid: 609  started new kfold 20 / 20\n",
-      "pid: 637  started new kfold 17 / 20\n",
-      "math range error\n",
-      "pid: 584  started new kfold 20 / 20\n",
-      "pid: 556  started new kfold 18 / 21\n",
-      "pid: 528  started new kfold 18 / 21\n",
-      "pid: 637  started new kfold 18 / 20\n",
-      "pid: 528  started new kfold 19 / 21\n",
-      "pid: 556  started new kfold 19 / 21\n",
-      "pid: 637  started new kfold 19 / 20\n",
-      "pid: 528  started new kfold 20 / 21\n",
-      "pid: 556  started new kfold 20 / 21\n",
-      "pid: 637  started new kfold 20 / 20\n",
-      "pid: 556  started new kfold 21 / 21\n",
-      "pid: 528  started new kfold 21 / 21\n"
+      "Already done:  0\n",
+      "tot conf: 3\n",
+      "remaining conf: 3\n",
+      "tot conf to do: 3\n",
+      "pid: 15549  started new kfold 1 / 1\n",
+      "pid: 15577  started new kfold 1 / 1\n",
+      "pid: 15605  started new kfold 1 / 1\n"
      ]
     }
    ],
    "source": [
-    "MS = ModelSelection('../data/gs_data/1l_sigmoid_5_fg_Stendhal.csv')\n",
+    "MS = ModelSelection('../data/gs_data/secondo_valore.csv')\n",
     "MS.default_values['metrics'] = [ErrorFunctions.mean_euclidean_error, ErrorFunctions.mean_squared_error]\n",
     "hyperparam_grid = {\n",
-    "    'lambda_tikhonov':[0.000000001, 0.00000001, 0.0000001],\n",
-    "    'batch_size':[6, 8], # 6, 8, \n",
+    "    'lambda_tikhonov':[0.000000001],\n",
+    "    'batch_size':[8],\n",
     "    'min_epochs': [150],\n",
     "    'max_epochs':[500],\n",
     "    \n",
     "    \n",
-    "    'learning_rate':[0.11, 0.13], # 0.11, 0.13], #0.15\n",
-    "    'lr_decay_tau':[145, 165, 185, 200],\n",
-    "    'alpha_momentum':[0.85, 0.92, 0.95],\n",
+    "    'learning_rate':[0.09],\n",
+    "    'lr_decay_tau':[185],\n",
+    "    'alpha_momentum':[0.92],\n",
     "    \n",
     "    \n",
     "    'error_increase_tolerance':[0.000001],\n",
@@ -267,8 +124,9 @@
     "    'topology': [str(sigmoid_l1)],\n",
     "    \n",
     "    'adamax' : [False],\n",
+    "    'adamax_learning_rate' : [0.1, 0.2, 0.3],\n",
     "}\n",
-    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 6, True, {})"
+    "MS.grid_searchKF(tr_norm_df.values, hyperparam_grid,  3, 3, False, {})"
    ]
   }
  ],
