--- a/notebook/test.ipynb
+++ b/notebook/test.ipynb
@@ -22,6 +22,28 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "INPUT = 10\n",
+    "OUTPUT = 3\n",
+    "\n",
+    "hidden_len = 32\n",
+    "hidden_fun = 'sigmoid'\n",
+    "output_fun = 'identity'\n",
+    "sigmoid_l1 = create_stratified_topology([INPUT,hidden_len,OUTPUT], \n",
+    "                                      [[None,[]]]*INPUT + [[hidden_fun, [1]]]*hidden_len + [[output_fun, []]]*OUTPUT)\n",
+    "\n",
+    "a = NeuralNetwork(sigmoid_l1, -0.75, 0.75, True)\n",
+    "\n",
+    "for i in range(5):\n",
+    "    print(a)\n",
+    "    a.reset()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [
@@ -43,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,14 +156,22 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'predictions' is not defined",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5161290322580645\n",
+      "0.5161290322580645\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'ErrorFunctions' has no attribute 'f1_score'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[5], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(ErrorFunctions\u001b[38;5;241m.\u001b[39maccuracy(\u001b[43mpredictions\u001b[49m, true_values))\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(sklearn\u001b[38;5;241m.\u001b[39mmetrics\u001b[38;5;241m.\u001b[39maccuracy_score(true_values\u001b[38;5;241m.\u001b[39mflatten(), [\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.5\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m predictions\u001b[38;5;241m.\u001b[39mflatten()]))\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(ErrorFunctions\u001b[38;5;241m.\u001b[39mf1_score(predictions, true_values))\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'predictions' is not defined"
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[5], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28mprint\u001b[39m(ErrorFunctions\u001b[38;5;241m.\u001b[39maccuracy(predictions, true_values))\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(sklearn\u001b[38;5;241m.\u001b[39mmetrics\u001b[38;5;241m.\u001b[39maccuracy_score(true_values\u001b[38;5;241m.\u001b[39mflatten(), [\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.5\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m predictions\u001b[38;5;241m.\u001b[39mflatten()]))\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mErrorFunctions\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mf1_score\u001b[49m(predictions, true_values))\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(sklearn\u001b[38;5;241m.\u001b[39mmetrics\u001b[38;5;241m.\u001b[39mf1_score(true_values\u001b[38;5;241m.\u001b[39mflatten(), [\u001b[38;5;241m1\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m x \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0.5\u001b[39m \u001b[38;5;28;01melse\u001b[39;00m \u001b[38;5;241m0\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m predictions\u001b[38;5;241m.\u001b[39mflatten()], average\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mmacro\u001b[39m\u001b[38;5;124m'\u001b[39m))\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'ErrorFunctions' has no attribute 'f1_score'"
      ]
     }
    ],
@@ -345,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
