--- a/notebook/done/Start_grid_search.ipynb
+++ b/notebook/done/Start_grid_search.ipynb
@@ -108,8 +108,8 @@
     "    'max_epochs':[400],\n",
     "    \n",
     "    \n",
-    "    'learning_rate':[0.05, 0.1],#, 0.2, 0.75],\n",
-    "    'lr_decay_tau':[137.5, 175],# 200, 225], #epochs\n",
+    "    'learning_rate':[0.05, 0.1],\n",
+    "    'lr_decay_tau':[137.5, 175],\n",
     "    'alpha_momentum':[0.75, 0.9],\n",
     "    \n",
     "    \n",
