--- a/notebook/done/Validation_analysis_4_topology.ipynb
+++ b/notebook/done/Validation_analysis_4_topology.ipynb
@@ -6,23 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import numpy as np\n",
     "import sys\n",
     "import os\n",
     "import pandas as pd\n",
-    "import plotly.express as px\n",
-    "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "import seaborn as sns\n",
     "import ast\n",
-    "import warnings\n",
     "\n",
     "sys.path.append(os.path.abspath('../src/'))\n",
     "from ActivationFunctions import *\n",
     "from NeuralNetwork import *\n",
     "from MyUtils import *\n",
     "from ModelSelection import *\n",
-    "\n",
     "\n",
     "%matplotlib inline"
    ]
